# Note: This pyproject.toml file is intended to publish model/ folder as pip package
#       and is not intended to be used for the whole project. For the project, use anaconda-project.yml
[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "ddpm"
description = "Pytorch implementation of 'Improved Denoising Diffusion Probabilistic Models', 'Denoising Diffusion Probabilistic Models' and 'Classifier-free Diffusion Guidance'"
requires-python = ">=3.7,<=3.10"
keywords = ["pytorch", "ddpm", "denoising diffusion probabilistic model", "generative", ]
license = {text = "MIT"}
readme = "readme_pip.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=1.8",
    "pytorch-lightning >= 1.8",
    "torchvision",
    "tensorguard==1.0.0",
    "path>=16.0"
]

version = "1.0.0"


[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["ddpm"]
